// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Left Sidebar should show ul of sidebar closed 1`] = `
<pf-layout-wrapper-left-sidebar
  clientAppRoot={[Function String]}
  companyName={[Function String]}
  enableCoreJdmInClient="null"
  enableCoreJdmInClient$={[Function Store]}
  enableCoreJdmInClientSubscription={[Function Subscriber]}
  layoutStore={[Function Store]}
  leftSidebarNavigationLinks$={[Function Store]}
  leftSidebarToggle="false"
  ngAppRoot={[Function String]}
  reload={[Function EventEmitter]}
  settingsService={[Function SettingsService]}
  store={[Function Store]}
  userContext$={[Function Observable]}
  userContextSubscription={[Function Subscriber]}
  userId={[Function Number]}
>
  <ul
    class="left-sidebar-nav pt-2 pl-0 m-0 mb-4 left-sidebar-nav-close"
    ng-reflect-klass="left-sidebar-nav pt-2 pl-0 m-0"
    ng-reflect-ng-class="[object Object]"
  >
    
  </ul><div
    class="left-sidebar-footer left-sidebar-footer-close"
    ng-reflect-klass="left-sidebar-footer"
    ng-reflect-ng-class="[object Object]"
  >
    <div
      class="left-sidebar-icon-close"
      ng-reflect-ng-class="[object Object]"
    >
      
      
      <span>
        <fa-icon
          size="lg"
        />
      </span>
    </div>
  </div>
</pf-layout-wrapper-left-sidebar>
`;

exports[`Left Sidebar should show ul of sidebar open 1`] = `
<pf-layout-wrapper-left-sidebar
  clientAppRoot={[Function String]}
  companyName={[Function String]}
  enableCoreJdmInClient="null"
  enableCoreJdmInClient$={[Function Store]}
  enableCoreJdmInClientSubscription={[Function Subscriber]}
  layoutStore={[Function Store]}
  leftSidebarNavigationLinks$={[Function Store]}
  leftSidebarToggle={[Function Boolean]}
  ngAppRoot={[Function String]}
  reload={[Function EventEmitter]}
  settingsService={[Function SettingsService]}
  store={[Function Store]}
  userContext$={[Function Observable]}
  userContextSubscription={[Function Subscriber]}
  userId={[Function Number]}
>
  <ul
    class="left-sidebar-nav pt-2 pl-0 m-0 mb-4 left-sidebar-nav-open"
    ng-reflect-klass="left-sidebar-nav pt-2 pl-0 m-0"
    ng-reflect-ng-class="[object Object]"
  >
    
  </ul><div
    class="left-sidebar-footer left-sidebar-footer-open"
    ng-reflect-klass="left-sidebar-footer"
    ng-reflect-ng-class="[object Object]"
  >
    <div
      class="left-sidebar-icon-open"
      ng-reflect-ng-class="[object Object]"
    >
      
      <span>
        <fa-icon
          size="lg"
        />
      </span>
      
    </div>
  </div>
</pf-layout-wrapper-left-sidebar>
`;
